classDiagram
    class Cliente {
        -int id_cliente
        -int telefono_cliente
        -string email_cliente
        -string empresa_cliente
        -string rfc_cliente
        +registrar()
        +actualizar()
    }

    class Proyecto {
        -int id_proyecto
        -string nombre_proyecto
        -string descripcion_proyecto
        -string complejidad_proyecto
        -Date fecha_inicio_proyecto
        -Date fecha_fin_proyecto
        -string estado_proyecto
        -int id_cliente_fk
        +crear()
        +actualizarEstado()
        +calcularDuracion()
    }

    class RequerimientoProyecto {
        -int id_requerimiento
        -int id_proyecto_fk
        -string descripcion_requerimiento
        -string tipo_requerimiento
        -string prioridad_requerimiento
        -int horasEstimadas_requerimiento
        +agregar()
        +estimar()
    }

    class PresupuestoProyecto {
        -int id_presupuesto
        -int id_proyecto_fk
        -decimal total_presupuesto
        -Date fecha_elaboracion
        -string estado_presupuesto
        +calcular()
        +aprobar()
    }

    class DetallePresupuesto {
        -int id_detalle_presupuesto
        -int id_presupuesto_fk
        -string metodo_de_pago
        -decimal monto_agregado
        -decimal total_adicional
        -decimal subtotal
        +calcularSubtotal()
    }

    class Recurso {
        -int id_recursos
        -int id_proyecto_fk
        -int cantidad_colaboradores
        -int horas_estimadas
        -int horas_adicionales
        -decimal tarifa_hora
        +estimar()
        +calcularCosto()
    }

    class SprintProyecto {
        -int id_sprints
        -int id_proyecto_fk
        -string nombre_sprints
        -Date fecha_inicio_sprints
        -Date fecha_fin_sprints
        -string estado_sprints
        +planificar()
    }

    class Colaborador{
    -int id_colaboradores
    -int id_proyecto_fk
    -int id_sprint_fk
    string nombre_colaborador
    string email_colaborador
    string rol_colaborador
    +registrar()
    +actualizar()
    }

    class ServicioAdicional {
        -int id_servicio_adicional
        -int id_detalle_presupuesto
        -string descripcion_servicio
        decimal monto_servicio_adicional
        calcularAdicionales()
    }

%% Relaciones
    Cliente "1" --> "0..*" Proyecto
    Proyecto "1" --> "1" PresupuestoProyecto
    PresupuestoProyecto "1" --> "1..*" DetallePresupuesto
    Proyecto "1" --> "1..*" Recurso
    Proyecto "1" --> "1..*" SprintProyecto
    Proyecto "1" --> "1..*" RequerimientoProyecto
    SprintProyecto "1" --> "0..*" RequerimientoProyecto
    SprintProyecto "1" --> "1..*" Colaborador
    Proyecto "1..*" --> "1..*" Colaborador
    ServicioAdicional "0..*" --> "1" DetallePresupuesto